# TestHomeWork

./: README.md  pyproject.toml  requirements.txt
conf/: config.py  constants.py  logger.py
framework/: hamburger_menu.py  hamburger_menu_elements.py  home_page.py  login_page.py  login_page_elements.py  page.py  page_element.py
framework/conf/: config.py  constants.py  logger.py
framework/locators/: hamburger_menu.py  login_page.py
tests/: conftest.py
tests/hamburger_menu/: conftest.py  test_hamburger_menu.py
tests/login/: conftest.py  test_login.py
utils/: android_utils.py
